--- a/.github/workflows/auto_lottery_Isearch.yml
+++ b/.github/workflows/auto_lottery_Isearch.yml
@@ -23,6 +23,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Build with environment
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          SERVERPUSHKEY: ${{ secrets.SERVERPUSHKEY }}
+          TZ: Asia/Shanghai
     - name: run with main.py
       run: |
         python main.py
