--- a/.github/workflows/auto_lottery_Isearch.yml
+++ b/.github/workflows/auto_lottery_Isearch.yml
@@ -9,7 +9,7 @@ on:
     # cron表达式，Actions时区是UTC时间，所以上午9点要往前推8个小时
 
 jobs:
-  start:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
