--- a/.github/workflows/auto_lottery_Isearch.yml
+++ b/.github/workflows/auto_lottery_Isearch.yml
@@ -1,12 +1,10 @@
 name: AUTO_LOTTERY_FOR_ISEARCH
 
 on:
+  workflow_dispatch:
   push:
-    # branches:
-    #   - master
-    branches-ignore:
-      - '**.md'
-      - 'docs/IMG/**'
+    branches:
+      - master
   schedule:
     - cron: '10 0 * * *'
     # cron表达式，Actions时区是UTC时间，这里是UTC时区每天0点10分运行，即UTF时区每天8点10分
