--- a/.github/workflows/auto_lottery_Isearch.yml
+++ b/.github/workflows/auto_lottery_Isearch.yml
@@ -7,6 +7,7 @@ on:
     branches-ignore:
       - '**.md'
       - 'docs/IMG/**'
+  workflow_dispatch:
   schedule:
     - cron: '10 0 * * *'
     # cron表达式，Actions时区是UTC时间，这里是UTC时区每天0点10分运行，即UTF时区每天8点10分
