--- a/.github/workflows/auto_lottery_Isearch.yml
+++ b/.github/workflows/auto_lottery_Isearch.yml
@@ -1,9 +1,9 @@
 name: AUTO_LOTTERY_FOR_ISEARCH
 
 on:
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
   workflow_dispatch:
   schedule:
     - cron: '10 0 * * *'
