--- a/.github/workflows/auto_lottery_Isearch.yml
+++ b/.github/workflows/auto_lottery_Isearch.yml
@@ -6,9 +6,10 @@ on:
   #     - master
   workflow_dispatch:
   schedule:
-    - cron: '30 1 * * *'
-    # - cron: '10 0 * * *' 怀疑Github Actions的时间比国内时间相差8小时50分
-    # cron表达式，Actions时区是UTC时间，这里是UTC时区每天0点10分运行，即UTF时区每天8点10分
+    - cron: '0 20 * * *'
+    # cron表达式，Actions时区是UTC时间，比我们所在的时区utf-8晚8个小时
+    # 这里我们设置20点0分启动，理论上中国是早上4点0分启动
+    # 实测了几次，发现定时任务无法精确到分钟启动，仅能确定实际启动时间比设定时间点晚8个多小时
     
 jobs:
   start:
