新增自动发帖、删帖功能（设计器延长使用）

--- a/.github/workflows/auto_lottery_Isearch.yml
+++ b/.github/workflows/auto_lottery_Isearch.yml
@@ -32,4 +32,4 @@ jobs:
         SERVERPUSHKEY: ${{ secrets.SERVERPUSHKEY }}
         TZ: Asia/Shanghai
       run: |
-        python test.py
+        python main.py
